Minor Changes   - minor ProjectAction refactoring   - removed "duplicated" command   - fixes visibility toggler   - my profile minor design fixes + remove second mail   - fix old code view image loading (fileName is no xml attribute in new catrobat version!)

--- a/assets/css/base/_icons.scss
+++ b/assets/css/base/_icons.scss
@@ -81,3 +81,12 @@
 #help-button {
   cursor:pointer
 }
+
+.text-icon-aligned {
+  display: flex;
+  align-items: center;
+}
+
+.trailing-icon {
+  margin-left: auto;
+}
